changed bio on about page

--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 
         <section class="about-text">
           <p>
-            Portuguese technology enthusiast with expertise in full-stack development. Finalising a degree in Computer Science at Coventry University, I'm now eager to enter the software engineering field and continue learning and growing while contributing to exciting projects. I'm a dedicated and hardworking team player who stays up-to-date with the latest technologies and trends, and I'm excited to make a positive impact in any organization I join.
+            I am a passionate and skilled full-stack developer from Portugal, with a strong background in Computer Science. With my degree from Coventry University, I have honed my skills in software development, web technologies, and project management. As an enthusiastic learner, I stay up-to-date with the latest trends and best practices to ensure that I can deliver top-quality work to my clients or organization. I am an adaptable and collaborative team player, with excellent problem-solving and communication skills.
           </p>
 
           <p>
-            Portuguese technology enthusiast with expertise in full-stack development. Finalising a degree in Computer Science at Coventry University, I'm now eager to enter the software engineering field and continue learning and growing while contributing to exciting projects. I'm a dedicated and hardworking team player who stays up-to-date with the latest technologies and trends, and I'm excited to make a positive impact in any organization I join.
+            I am actively seeking a challenging role in software engineering where I can apply my expertise in full-stack development and contribute to innovative and exciting projects. I am particularly interested in opportunities where I can use my knowledge to develop and implement scalable and efficient solutions that enhance the user experience. As a goal-oriented individual, I am always eager to take on new challenges and strive to improve my skills to achieve outstanding results.
           </p>
         </section>
 
