completed resume part and updated the technologies on home page

--- a/index.html
+++ b/index.html
@@ -203,11 +203,7 @@
 
         <section class="about-text">
           <p>
-            I am a passionate and skilled full-stack developer from Portugal, with a strong background in Computer Science. With my degree from Coventry University, I have honed my skills in software development, web technologies, and project management. As an enthusiastic learner, I stay up-to-date with the latest trends and best practices to ensure that I can deliver top-quality work to my clients or organization. I am an adaptable and collaborative team player, with excellent problem-solving and communication skills.
-          </p>
-
-          <p>
-            I am actively seeking a challenging role in software engineering where I can apply my expertise in full-stack development and contribute to innovative and exciting projects. I am particularly interested in opportunities where I can use my knowledge to develop and implement scalable and efficient solutions that enhance the user experience. As a goal-oriented individual, I am always eager to take on new challenges and strive to improve my skills to achieve outstanding results.
+            I am a passionate and curious full-stack developer from Portugal, with a background in Computer Science and Media Production. Whilst studying for my Computer Science degree at Coventry University, I have honed my skills in software development, web technologies, and project management. As an enthusiastic learner, I stay up-to-date with the latest trends and best practices to ensure that I can deliver top-quality work to my clients or organization. I am an adaptable and collaborative team player, with great problem-solving and communication skills, ready to take on new exciting challenges.
           </p>
         </section>
 
@@ -233,7 +229,7 @@
                 <h4 class="h4 service-item-title">Front-End Development</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Creating the user-facing part of a website or application.
                 </p>
               </div>
 
@@ -249,7 +245,7 @@
                 <h4 class="h4 service-item-title">Back-End Development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Working on the server-side of a website or application.
                 </p>
               </div>
 
@@ -265,7 +261,7 @@
                 <h4 class="h4 service-item-title">Full-Stack Development</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Working on both the front-end and back-end of a website or application.
                 </p>
               </div>
 
@@ -281,7 +277,7 @@
                 <h4 class="h4 service-item-title">Dev Ops</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Streamlining the process of deploying and maintaining software applications.
                 </p>
               </div>
 
@@ -297,7 +293,7 @@
                 <h4 class="h4 service-item-title">Code Quality</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Ensuring that code is well-written, well-documented, and easy to maintain.
                 </p>
               </div>
 
@@ -313,7 +309,7 @@
                 <h4 class="h4 service-item-title">Web Design</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Creating the visual elements of a website or application.
                 </p>
               </div>
 
@@ -393,42 +389,56 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Technicolour Distribution Services, Rugby, UK</h4>
 
-              <span>2015 — Present</span>
+              <span>2018 — Present</span>
+
+              <h5 class="h5">Warehouse Operative</h5>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Receiving and organizing new stock, updating inventory records, replenishing and picking stock using tools and software.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Freelancing</h4>
 
-              <span>2013 — 2015</span>
+              <span>2014 — Present</span>
+
+              <h5 class="h5">Web Developer and Designer</h5>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Developing websites, such as portfolios and landing pages. Designing flyers for events and brand development.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Elite Cup Cartaxo, Portugal</h4>
 
-              <span>2010 — 2013</span>
+              <span>2017 — Present</span>
+
+              <h5 class="h5">Co-Founder / Head of Design and Branding </h5>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Organizing and launching a football tournament for U-11 children, featuring Portugal's premier football academies. This includes creating a unique brand identity, as well as developing a comprehensive marketing and online presence.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">TaNaHora Audiovisuais, Portugal</h4>
+
+              <span>2016 — 2018</span>
+
+              <h5 class="h5">Event Broadcasting</h5>
+
+              <p class="timeline-text">
+                Managing TV broadcasting at music festivals and events across Portugal. Set up and maintain LED screens for live broadcasting, ensuring a successful and engaging experience for viewers.
               </p>
 
             </li>
