--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">Who am I?</h2>
         </header>
 
         <section class="about-text">
@@ -214,7 +214,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">What do i offer?</h3>
 
           <ul class="service-list">
 
