added tech icons on services section

--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
                 <p class="service-item-text">
                   Creating the user-facing part of a website or application.
                 </p>
+
+                <div class="service-tech-icons">
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/html-5--v2.png" alt="html-5"/>
+                  <img src="https://img.icons8.com/ios-glyphs/60/228BE6/css3.png" alt="css-3"/>
+                  <img src="https://img.icons8.com/material-rounded/24/228BE6/tailwind_css.png" alt="tailwind-css"/>
+                  <img src="https://img.icons8.com/material-rounded/24/228BE6/sass.png" alt="sass"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/javascript.png" alt="javascript"/>
+                </div>
+
               </div>
 
             </li>
@@ -239,22 +248,13 @@
                 <p class="service-item-text">
                   Working on the server-side of a website or application.
                 </p>
-              </div>
 
-            </li>
+                <div class="service-tech-icons">
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/python.png" alt="python"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/javascript.png" alt="javascript"/>
+                  <img src="https://img.icons8.com/windows/32/228BE6/node-js.png" alt="node-js"/>
+                </div>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-full-stack.png" alt="mobile app icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Full-Stack Development</h4>
-
-                <p class="service-item-text">
-                  Working on both the front-end and back-end of a website or application.
-                </p>
               </div>
 
             </li>
