added tech icons to all services sections and deleted redundant services sections

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                   <img src="https://img.icons8.com/material-rounded/24/228BE6/tailwind_css.png" alt="tailwind-css"/>
                   <img src="https://img.icons8.com/material-rounded/24/228BE6/sass.png" alt="sass"/>
                   <img src="https://img.icons8.com/ios-filled/50/228BE6/javascript.png" alt="javascript"/>
+                  <img src="https://img.icons8.com/external-tanah-basah-glyph-tanah-basah/48/228BE6/external-react-social-media-tanah-basah-glyph-tanah-basah.png" alt="react-js"/>
                 </div>
 
               </div>
@@ -250,9 +251,11 @@
                 </p>
 
                 <div class="service-tech-icons">
-                  <img src="https://img.icons8.com/ios-filled/50/228BE6/python.png" alt="python"/>
                   <img src="https://img.icons8.com/ios-filled/50/228BE6/javascript.png" alt="javascript"/>
                   <img src="https://img.icons8.com/windows/32/228BE6/node-js.png" alt="node-js"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/python.png" alt="python"/>
+                  <img src="https://img.icons8.com/windows/32/228BE6/django.png" alt="django"/>
+                  <img src="https://img.icons8.com/external-outline-juicy-fish/60/228BE6/external-sql-coding-and-development-outline-outline-juicy-fish.png" alt="sql"/>
                 </div>
 
               </div>
@@ -266,27 +269,18 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Dev Ops</h4>
+                <h4 class="h4 service-item-title">Dev Ops & Code Quality</h4>
 
                 <p class="service-item-text">
                   Streamlining the process of deploying and maintaining software applications.
                 </p>
-              </div>
 
-            </li>
+                <div class="service-tech-icons">
+                  <img src="https://img.icons8.com/glyph-neue/64/228BE6/github.png" alt="github"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/docker.png" alt="docker"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/slack-new.png" alt="slack-new"/>
+                </div>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-code-quality.png" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Code Quality</h4>
-
-                <p class="service-item-text">
-                  Ensuring that code is well-written, well-documented, and easy to maintain.
-                </p>
               </div>
 
             </li>
@@ -303,6 +297,13 @@
                 <p class="service-item-text">
                   Creating the visual elements of a website or application.
                 </p>
+
+                <div class="service-tech-icons">
+                  <img src="https://img.icons8.com/ios-glyphs/60/228BE6/adobe-photoshop.png" alt="adobe-photoshop"/>
+                  <img src="https://img.icons8.com/ios-glyphs/60/228BE6/adobe-illustrator.png" alt="adobe-illustrator"/>
+                  <img src="https://img.icons8.com/ios-filled/50/228BE6/figma--v1.png" alt="figma--v1"/>
+                </div>
+
               </div>
 
             </li>
