--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:joao_saavedra_18@hotmail.com" class="contact-link">joao_saavedra_18@hotmail.com</a>
+              <a href="mailto:joao_saavedra_18@hotmail.com" class="contact-link">joaopmsaavedra@outlook.com</a>
             </div>
 
           </li>
@@ -254,7 +254,6 @@
                   <img src="https://img.icons8.com/ios-filled/50/228BE6/javascript.png" alt="javascript"/>
                   <img src="https://img.icons8.com/windows/32/228BE6/node-js.png" alt="node-js"/>
                   <img src="https://img.icons8.com/ios-filled/50/228BE6/python.png" alt="python"/>
-                  <img src="https://img.icons8.com/windows/32/228BE6/django.png" alt="django"/>
                   <img src="https://img.icons8.com/external-outline-juicy-fish/60/228BE6/external-sql-coding-and-development-outline-outline-juicy-fish.png" alt="sql"/>
                 </div>
 
