--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:joao_saavedra_18@hotmail.com" class="contact-link">joaopmsaavedra@outlook.com</a>
+              <a href="mailto:joaopmsaavedra@outlook.com" class="contact-link">joaopmsaavedra@outlook.com</a>
             </div>
 
           </li>
@@ -467,12 +467,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/spf.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/spf.jpg" alt="SPF Agrobusiness" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Sousa Prada & Filhos LDA</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Development</p>
 
               </a>
             </li>
@@ -485,12 +485,66 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/elite.jpg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/elite.jpg" alt="Elite Cup Cartaxo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Elite Cup Cartaxo</h3>
 
-                <p class="project-category">Web Design</p>
+                <p class="project-category">Web Design and Branding</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="https://github.com/jpmsaavedra/parcel_tracker-spa" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/tracker-spa.jpg" alt="Parcel Tracker" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Parcel Delivery Tracker</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="https://github.com/jpmsaavedra/issue-tracker" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/issue-webapp.jpg" alt="Issue Tracker" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Local Community Issue Tracker</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="https://github.com/jpmsaavedra/big_data-project" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/matlab.jpg" alt="MATLAB" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Paralel Processing Analysis</h3>
+
+                <p class="project-category">Big Data Programming</p>
 
               </a>
             </li>
