changed email and fixed type on portfolio page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:joaopmsaavedra@outlook.com" class="contact-link">joaopmsaavedra@outlook.com</a>
+              <a href="mailto:info@joaopmsaavedra.com" class="contact-link">info@joaopmsaavedra.com</a>
             </div>
 
           </li>
@@ -470,7 +470,7 @@
                   <img src="./assets/images/spf.jpg" alt="SPF Agrobusiness" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Sousa Prada & Filhos LDA</h3>
+                <h3 class="project-title">Sousa Prado & Filhos LDA</h3>
 
                 <p class="project-category">Web Development</p>
 
